# python_cookiecutter

./: .editorconfig  .gitattributes  .markdown_link_check_config.json  .pre-commit-config.yaml  LICENSE  README.md  cookiecutter.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bot.yml  build.yml  git_checks.yml  sanity_checks_for_prs.yml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .CMakePresets.json.in  .cmake_format.py  .editorconfig  .gitattributes  .gitignore  .markdown_link_check_config.json  .pre-commit-config.yaml  .python-version  .readthedocs.yml  .ruff.toml  AUTHORS.md  CMakePresets.json  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  dependencies.py  pyproject.toml  requirements-ci.txt  requirements-optional.txt  requirements.txt  setup.cfg  setup.py  tox.ini  versioneer.py
{{cookiecutter.project_slug}}/.github/ISSUE_TEMPLATE/: bug_report.md
{{cookiecutter.project_slug}}/.github/workflows/: black.yml  bot.yml  deploy.yml  docs.yml  git_checks.yml  linter.yml  process_linter_results.yml  ruff.yml  test.yml  test_deploy.yml
{{cookiecutter.project_slug}}/.vcpkg-overlays/toolchains/: clang_include.cmake
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.md  installation.md  substitutions.py  usage.md
{{cookiecutter.project_slug}}/docs/examples/: basic.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.__module_name}}/: __init__.py  cli.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: cli.py
{{cookiecutter.project_slug}}/tests/: conftest.py  fixtures.py  test_{{cookiecutter.__module_name}}.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  _version.py  cli.py
