[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
authors = [
    { name = "{{ cookiecutter.project_slug }}", email = "{{ cookiecutter.email }}" }
]
description = "{{ cookiecutter.short_description }}"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">={{ cookiecutter.minimum_python_version }}"
dependencies = [
    "rich",
    "packaging",
    "typer"
]

[tool.hatch.version]
source = "vcs"
[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[dependency-groups]
docs = [
    "sphinx>=6",
    "sphinx-autoapi>=3",
    "myst-nb>=0.18",
    "furo>=2023.9.10"
]
dev = [
    "build",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "pytest-pycharm",
    "pytest-regressions",
    "pytest-datadir",
]

[project.urls]
Documentation = "{{ cookiecutter.repository_url }}"
Source = "{{ cookiecutter.repository_url }}"

[tool.ruff]
target-version = "py{{ cookiecutter.minimum_python_version | replace('.', '') }}"
select = ["ALL"]
extend-ignore = ["E501", "ANN201", "ANN001", "D211", "D213"]
extend-exclude = ["_version.py", "docs/*.py"]
fix = true
line-length = 120

[tool.ruff.per-file-ignores]
"tests/*.py" = ["S101", "D103"]

[tool.pytest.ini_options]
addopts = "--cov={{ cookiecutter.__module_name }} --cov-report=term-missing"
